# URLShortenerFastAPI

./: README.md  pyproject.toml
app/: main.py  schemas.py  utils.py
app/db/: models.py
migrations/: env.py
migrations/versions/: 71934fdd8832_init_db.py
