[tool.poetry]
name = "urlshortenerfastapi"
version = "0.1.0"
description = ""
authors = ["onehandedpirate <plagueismkii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
alembic = "^1.11.1"
uvicorn = "^0.23.1"
sqlalchemy-utils = "^0.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
